--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,30 +46,30 @@ jobs:
       - name: Typecheck
         run: nr typecheck
 
-  test:
-    runs-on: ${{ matrix.os }}
+  # test:
+  #   runs-on: ${{ matrix.os }}
 
-    strategy:
-      matrix:
-        node: [lts/*]
-        os: [ubuntu-latest]
-      fail-fast: false
+  #   strategy:
+  #     matrix:
+  #       node: [lts/*]
+  #       os: [ubuntu-latest]
+  #     fail-fast: false
 
-    steps:
-      - uses: actions/checkout@v4
-      - uses: pnpm/action-setup@v3
-      - uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node }}
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - uses: pnpm/action-setup@v3
+  #     - uses: actions/setup-node@v4
+  #       with:
+  #         node-version: ${{ matrix.node }}
 
-      - name: Setup
-        run: npm i -g @antfu/ni
+  #     - name: Setup
+  #       run: npm i -g @antfu/ni
 
-      - name: Install
-        run: nci
+  #     - name: Install
+  #       run: nci
 
-      - name: Build
-        run: nr build
+  #     - name: Build
+  #       run: nr build
 
-      - name: Test
-        run: nr test
+  #     - name: Test
+  #       run: nr test
