--- a/package.json
+++ b/package.json
@@ -60,5 +60,8 @@
     "typescript": "^5.7.3",
     "vite": "^6.1.0",
     "vitest": "^3.0.5"
+  },
+  "dependencies": {
+    "@vitest/coverage-v8": "^3.0.8"
   }
 }
