chore: setting up pre-commit + bundling

--- a/package.json
+++ b/package.json
@@ -17,51 +17,38 @@
     "utils"
   ],
   "sideEffects": false,
-  "exports": {
-    ".": {
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.cjs"
-    }
-  },
-  "main": "dist/index.cjs",
-  "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "rollup -c",
-    "dev": "pnpm build -- --watch",
+    "build": "tsup",
+    "dev": "tsup --watch",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "prepublishOnly": "npm run build",
-    "release": "bumpp --commit --push --tag && npm publish",
     "start": "esno src/index.ts",
     "test": "vitest",
-    "typecheck": "tsc --noEmit"
-  },
-  "dependencies": {
-    "@vitest/coverage-v8": "^3.0.8"
+    "typecheck": "tsc --noEmit",
+    "prepare": "simple-git-hooks"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.2.0",
-    "@rollup/plugin-alias": "^5.1.1",
-    "@rollup/plugin-commonjs": "^28.0.2",
-    "@rollup/plugin-json": "^6.1.0",
-    "@rollup/plugin-node-resolve": "^16.0.0",
     "@types/node": "^22.13.2",
     "@types/throttle-debounce": "^5.0.2",
-    "bumpp": "^10.0.3",
+    "@vitest/coverage-v8": "^3.0.8",
     "eslint": "^9.20.1",
     "eslint-plugin-format": "^1.0.1",
     "esno": "^4.8.0",
-    "p-limit": "^6.2.0",
-    "rollup": "^4.34.6",
-    "rollup-plugin-dts": "^6.1.1",
-    "rollup-plugin-esbuild": "^6.2.0",
+    "nano-staged": "^0.8.0",
+    "simple-git-hooks": "^2.11.1",
     "throttle-debounce": "^5.0.2",
+    "tsup": "^8.4.0",
     "typescript": "^5.7.3",
-    "vite": "^6.1.0",
     "vitest": "^3.0.5"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "pnpm nano-staged"
+  },
+  "nano-staged": {
+    "*.{js,ts,tsx,vue,md}": "eslint --fix"
   }
 }
