--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,11 +3,11 @@ name: CI
 on:
   push:
     branches:
-      - master
+      - dev
 
   pull_request:
     branches:
-      - master
+      - dev
 
 jobs:
   lint:
